--- a/flask_trial_run/Dockerfile
+++ b/flask_trial_run/Dockerfile
@@ -6,3 +6,5 @@ RUN apt-get update
 ADD requirements.txt .
 RUN pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
+
+EXPOSE 5000
